# prompter

./: Cargo.toml  README.md
src/: fileloader.rs  main.rs  player.rs  playlist.rs  tui.rs
