[package]
name = "prompter"
version = "0.1.0"
authors = ["Martin Schmidt <inw@immernurwollen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.cursive]
cursive = "*"
default-features = false
features = ["termion-backend"]